updates for consul, consului, and apache

--- a/roles/consul/templates/consulagent.conf
+++ b/roles/consul/templates/consulagent.conf
@@ -1,6 +1,6 @@
 {
     {% if consul_join %}
-    "start_join": ["{{ consul_join }}"],
+    "start_join": [{{ consul_join }}],
     {% endif %}
     "server": false,
     "rejoin_after_leave": true,
