--- a/roles/consul/templates/consulagent.conf
+++ b/roles/consul/templates/consulagent.conf
@@ -7,5 +7,5 @@
     "enable_syslog": false,
     "data_dir": "{{ consul_data_dir }}",
     "log_level": "{{ consul_log_lvl }}",
-    "datacenter": "{{ ansible_environment }}"
+    "datacenter": "aeb{{ ansible_environment }}"
 }
