--- a/roles/consul/templates/consulserver.conf
+++ b/roles/consul/templates/consulserver.conf
@@ -7,6 +7,6 @@
     "enable_syslog": false,
     "data_dir": "{{ consul_data_dir }}/consul",
     "log_level": "{{ consul_log_lvl }}",
-    "datacenter": "{{ ansible_environment }}",
+    "datacenter": "aeb{{ ansible_environment }}",
     "bootstrap_expect": {{ groups['consulservers'] | length }}
 }
