--- a/roles/consul-template/vars/main.yml
+++ b/roles/consul-template/vars/main.yml
@@ -1,3 +1,3 @@
 ---
 consul_template_config_dir: /etc/consul-template/conf.d
-consul_template_config_file: /etc/consul-template.conf
+consul_template_ctmpl_dir: /etc/consul-template/ctmpl
