--- a/roles/consul/tasks/main.yml
+++ b/roles/consul/tasks/main.yml
@@ -8,31 +8,35 @@
   - name: Create Consul Agent config
     template: src=consulagent.conf dest=/etc/consul.conf owner="{{ consul_user }}" group="{{ consul_group }}" mode=744
     when: "'consulagents' in group_names"
+    notify: refresh consul
 
   - name: Create Consul Server config
     template: src=consulserver.conf dest=/etc/consul.conf owner="{{ consul_user }}" group="{{ consul_group }}" mode=744
     when: "'consulservers' in group_names"
+    notify: refresh consul
 
-  - name: Create Consul bin dir
-    file: path={{ consul_app_path }}/bin state=directory owner="{{ consul_user }}" group="{{ consul_group }}" mode=744
+  - name: Create Consul bin, config, data, and log directories
+    file: path={{ item }} state=directory owner={{ consul_user }} group={{ consul_group }} mode=744
+    with_items:
+      - "{{ consul_app_path}}/bin"
+      - "{{ consul_config_dir }}"
+      - "{{ consul_data_dir }}"
+      - "{{ consul_log_dir }}"
 
-  - name: Install Consul
+  - name: Copy consul executable
     copy: src=/usr/nano/build/dev/consul/bin/consul dest={{ consul_app_path }}/bin/consul owner="{{ consul_user }}" group="{{ consul_group }}" mode=744
-
-  - name: Create Consul config folder
-    file: path={{ consul_config_dir }} state=directory owner="{{ consul_user }}" group="{{ consul_group }}" mode=744
-
-  - name: Create Consul data dir
-    file: path={{ consul_data_dir }} mode=755 state=directory owner="{{ consul_user }}" group="{{ consul_group }}"
-
-  - name: Create Consul log dir
-    file: path={{ consul_log_dir }} mode=755 state=directory owner="{{ consul_user }}" group="{{ consul_group }}"
+    notify: restart consul
 
   - name: Install consul init.d script
     template: src=consul.init.d mode=744 dest=/etc/init.d/consul
+    when: "'consului' not in group_names"
+    notify: 
+      - install consul
+      - restart consul
 
-  - name: Run insserv to install service
-    command: /sbin/insserv -f consul
-
-  - name: Start consul service
-    service: name=consul state=restarted
+  - name: Install consul init.d script
+    template: src=consului.init.d mode=744 dest=/etc/init.d/consul
+    when: "'consului' in group_names"
+    notify: 
+      - install consul
+      - restart consul
