--- a/roles/consul/templates/consulserver.conf
+++ b/roles/consul/templates/consulserver.conf
@@ -8,5 +8,13 @@
     "data_dir": "{{ consul_data_dir }}/consul",
     "log_level": "{{ consul_log_lvl }}",
     "datacenter": "aeb{{ ansible_environment }}",
-    "bootstrap_expect": {{ groups['consulservers'] | length }}
+    "bootstrap_expect": {{ groups['consulservers'] | length }},
+    "ports": {
+       "http": {{ consul_port }},
+       "dns": {{ consul_dns_port }},
+       "rpc": {{ consul_rpc_port }},
+       "serf_lan": {{ consul_serf_lan_port }},
+       "serf_wan": {{ consul_serf_wan_port }},
+       "server": {{ consul_server_port }}
+    }
 }
