--- a/roles/consul/templates/consulagent.conf
+++ b/roles/consul/templates/consulagent.conf
@@ -7,5 +7,13 @@
     "enable_syslog": false,
     "data_dir": "{{ consul_data_dir }}",
     "log_level": "{{ consul_log_lvl }}",
-    "datacenter": "aeb{{ ansible_environment }}"
+    "datacenter": "aeb{{ ansible_environment }}",
+    "ports": {
+       "http": {{ consul_port }},
+       "dns": {{ consul_dns_port }},
+       "rpc": {{ consul_rpc_port }},
+       "serf_lan": {{ consul_serf_lan_port }},
+       "serf_wan": {{ consul_serf_wan_port }},
+       "server": {{ consul_server_port }}
+    }
 }
