--- a/roles/mongod/tasks/main.yml
+++ b/roles/mongod/tasks/main.yml
@@ -1,32 +1,66 @@
 ---
-# installs mongodb on servers
-#   need to add script to start and configure replication
-#   need to add script to create host user and group
-#   need to add script to create db users
+# installs mongodb on server(s)
+#   group_var: mongod_deploy -- single for stand-alone node; cluster for replication set
 
-  - name: Create Mongo bin dir
-    file: path=/usr/nano/bin state=directory
+  - name: Ensure group is present
+    group: name="{{ mongo_group }}" state=present
 
-  - name: Create Mongo data dir
-    file: path={{ mongo_data_dir }} mode=755 state=directory
+  - name: Create user to be used by dameon processes
+    user: name="{{ mongo_user }}" comment="Nanotech Logging Services" group="{{ mongo_group }}"
 
-  - name: Create Mongo log dir
-    file: path={{ mongo_log_dir }} mode=755 state=directory
+  - name: Install mongo dependencies
+    zypper: name={{ item }} state="latest"
+    with_items:
+     - "cyrus-sasl"
+     - "krb5"
+     - "libgcc46"
+     - "libopenssl0_9_8"
+     - "libsnmp15"
+     - "libstdc++46"
+     - "zlib"
+
+  - name: Create Mongo app, data and log directories
+    file: path={{ item }} state=directory owner={{ mongo_user }} group={{ mongo_group }} mode=755
+    with_items:
+     - "{{ inf_app_path }}/mongo"
+     - "{{ db_data_path }}/mongo/mongod"
+     - "{{ db_log_path }}"
+     - "/var/run/mongodb"
 
 # copy and unpack mongo executable archive
   - name: Install Mongo executables
-    unarchive: src=/usr/nano/build/archive/mongo-2.6.3.tar.gz dest=/usr/nano/bin
+    unarchive: src=/usr/nano/build/{{ ansible_environment }}/mongo/mongo-ent.tar.gz dest={{ inf_app_path }}/mongo owner={{ mongo_user }} group={{ mongo_group }}
 
-  - name: Create mongodb config
-    template: src=../templates/mongodb.conf dest=/etc/mongodb.conf
+  - name: Add bootstrap program and config
+    copy: src="{{ item.src }}" dest={{ item.dest }} mode=777
+    with_items:
+      - { src: "/usr/nano/build/{{ ansible_environment }}/bootstrap/bootstrap", dest: "/tmp/bootstrap" }
+      - { src: "bs_mongod.conf", dest: "/tmp/bs_mongod.conf" }
+
+  - name: Add bootstrap tmpl file
+    template: src=bs_mongod.tmpl dest=/tmp/bs_mongod.tmpl
+
+  - name: Run bootstrap process
+    command: /tmp/bootstrap -conf=/tmp/bs_mongod.conf -tmpl=/tmp/bs_mongod.tmpl
+    run_once: true
+
+  - name: Add mongod status utility
+    template: src="mongod_status.sh" dest="{{ inf_app_path }}/mongo/mongo_status.sh" mode=755
+
+  - name: Add consul-template ctmpl file
+    copy: src=mongod.{{ mongod_deploy }}.ctmpl dest=/etc/consul-template/ctmpl/mongod.ctmpl
+    notify: refresh consultemplate
+
+  - name: Add file consul-template conf
+    template: src=consul-template.conf dest=/etc/consul-template/conf.d/mongod mode=744
+    notify: refresh consultemplate
+
+  - name: Add file consul service config
+    template: src=mongod.json dest=/etc/consul.d/mongod.json mode=744
+    notify: refresh consul
 
   - name: Install mongo init script
-    copy: src=../files/init.d/mongodb mode=744 dest=/etc/init.d/mongodb
-
-# SUSE install service
-  - name: Run chkconfig to enable service
-    command: /sbin/insserv mongodb
-
-# start the mongod service
-  - name: Enable mongod service
-    command: /etc/init.d/mongodb start
+    template: src=mongod.init.d mode=744 dest=/etc/init.d/mongod
+    notify:
+      - install mongod
+      - retart mongod
