--- a/roles/consul-template/handlers/main.yml
+++ b/roles/consul-template/handlers/main.yml
@@ -1,11 +1,11 @@
 ---
 # file: roles/consul-template/handlers/main.yml
 - name: refresh consultemplate
-  shell: 'kill -1 $(cat /var/run/consul-template.pid)'
+  shell: 'kill -1 $(cat {{ pid_path}}/consul-template.pid)'
 
 - name: install consultemplate
-  command: /sbin/insserv -f consul-template
+  command: /sbin/insserv -f consul-template{{ init_suffix }}
 
 - name: restart consultemplate
-  service: name=consul-template state=restarted
+  service: name=consul-template{{ init_suffix }} state=restarted
 
