--- a/roles/consul-template/tasks/main.yml
+++ b/roles/consul-template/tasks/main.yml
@@ -6,13 +6,15 @@
       - "{{ consul_template_config_dir }}"
       - "{{ inf_app_path }}/consul-template/bin"
 
+  - name: Process templates init.d
+    template: src=consul-template.init.d dest=/etc/init.d/consul-template{{ init_suffix }} mode=744
+    notify: 
+      - install consultemplate
+      - restart consultemplate
+
   - name: Install consul-template
     copy: src="/usr/nano/build/{{ ansible_environment}}/consul-template/consul-template" mode=744 dest="{{ inf_app_path }}/consul-template/consul-template"
     notify: restart consultemplate
-
-  - name: Process templates init.d
-    template: src=consul-template.init.d dest=/etc/init.d/consul-template mode=744
-    notify: install consultemplate
 
   - name: Process config template
     template: src=01-consul-template.conf dest="{{ consul_template_config_dir }}/01-consul-template.conf" mode=744
