--- a/roles/consul-template/vars/main.yml
+++ b/roles/consul-template/vars/main.yml
@@ -1,3 +1,3 @@
 ---
-consul_template_config_dir: /etc/consul-template/conf.d
-consul_template_ctmpl_dir: /etc/consul-template/ctmpl
+consul_template_config_dir: "{{ etc_conf }}/consul-template/conf.d"
+consul_template_ctmpl_dir: "{{ etc_conf }}/consul-template/ctmpl"
