--- a/roles/consul/handlers/main.yml
+++ b/roles/consul/handlers/main.yml
@@ -1,10 +1,10 @@
 ---
 # file: roles/consul/handlers/main.yml
 - name: install consul
-  command: /sbin/insserv -f consul
+  command: /sbin/insserv -f consul{{ init_suffix }}
 
 - name: restart consul
-  service: name=consul state=restarted
+  service: name=consul{{ init_suffix }} state=restarted
 
 - name: refresh consul
-  shell: 'kill -1 $(cat /var/run/consul.pid)'
+  shell: 'kill -1 $(cat {{ pid_path }}/consul.pid)'
