--- a/roles/consul/tasks/main.yml
+++ b/roles/consul/tasks/main.yml
@@ -6,17 +6,17 @@
     user: name="{{ consul_user }}" comment="Consul dameon account" group="{{ consul_group }}"
 
   - name: Create Consul Agent config
-    template: src=consulagent.conf dest=/etc/consul.conf owner="{{ consul_user }}" group="{{ consul_group }}" mode=744
+    template: src=consulagent.conf dest={{ etc_conf }}/consul.conf owner="{{ consul_user }}" group="{{ consul_group }}" mode=744
     when: "'consulagents' in group_names"
     notify: refresh consul
 
   - name: Create Consul Server config
-    template: src=consulserver.conf dest=/etc/consul.conf owner="{{ consul_user }}" group="{{ consul_group }}" mode=744
+    template: src=consulserver.conf dest={{ etc_conf }}/consul.conf owner="{{ consul_user }}" group="{{ consul_group }}" mode=744
     when: "'consulservers' in group_names"
     notify: refresh consul
 
   - name: Create Consul bin, config, data, and log directories
-    file: path={{ item }} state=directory owner={{ consul_user }} group={{ consul_group }} mode=744
+    file: path={{ item }} state=directory owner={{ consul_user }} group={{ consul_group }} mode=755
     with_items:
       - "{{ consul_app_path}}/bin"
       - "{{ consul_config_dir }}"
@@ -24,18 +24,18 @@
       - "{{ consul_log_dir }}"
 
   - name: Copy consul executable
-    copy: src=/usr/nano/build/dev/consul/bin/consul dest={{ consul_app_path }}/bin/consul owner="{{ consul_user }}" group="{{ consul_group }}" mode=744
+    copy: src=/usr/nano/build/{{ ansible_environment }}/consul/bin/consul dest={{ consul_app_path }}/bin/consul owner="{{ consul_user }}" group="{{ consul_group }}" mode=744
     notify: restart consul
 
   - name: Install consul init.d script
-    template: src=consul.init.d mode=744 dest=/etc/init.d/consul
+    template: src=consul.init.d mode=744 dest=/etc/init.d/consul{{ init_suffix }}
     when: "'consului' not in group_names"
     notify: 
       - install consul
       - restart consul
 
   - name: Install consul init.d script
-    template: src=consului.init.d mode=744 dest=/etc/init.d/consul
+    template: src=consului.init.d mode=744 dest=/etc/init.d/consul{{ init_suffix }}
     when: "'consului' in group_names"
     notify: 
       - install consul
