--- a/roles/consul/vars/main.yml
+++ b/roles/consul/vars/main.yml
@@ -1,11 +1,11 @@
 ---
 consul_join: "{% for host in groups['consulservers'] %} \"{{ host }}\" {% if not loop.last %} , {% endif %} {% endfor %}"
 consul_app_path: "{{ inf_app_path }}/consul"
-consul_config_dir: /etc/consul.d
+consul_config_dir: "{{ etc_conf }}/consul.d"
 consul_data_dir: "{{ inf_data_path }}"
 consul_log_dir: "{{ inf_log_path }}"
 consul_log_lvl: WARN 
 consul_ui_dir: "{{ apache_doc_root }}/consului"
 consul_data_center: "{{ ansible_environment }}"
 consul_user: consul
-consul_group: nanocore
+consul_group: "{{ inf_group }}"
