--- a/roles/kibana/templates/consul-template.conf
+++ b/roles/kibana/templates/consul-template.conf
@@ -1,5 +1,5 @@
 template {
-	source = "/etc/consul-template/ctmpl/kibana.ctmpl"
+	source = "{{ etc_conf }}/consul-template/ctmpl/kibana.ctmpl"
 	destination = "{{ inf_app_path }}/kibana/current/config/kibana.yml"
 	command = "/etc/init.d/kibana{{ init_suffix }} restart"
 }
