--- a/roles/logstash/handlers/main.yml
+++ b/roles/logstash/handlers/main.yml
@@ -1,13 +1,13 @@
 ---
 # file: roles/logstash/handlers/main.yml
 - name: install logstash
-  command: /sbin/insserv -f logstash
+  command: /sbin/insserv -f logstash{{ init_suffix }}
 
 - name: restart logstash
-  service: name=logstash state=restarted
+  service: name=logstash{{ init_suffix }} state=restarted
 
 - name: generate lscert
-  command: openssl req -config /etc/ssl/logstash.cnf -x509 -days 3650 -batch -nodes -newkey rsa:2048 -keyout {{ inf_app_path }}/logstash/current/logstash-forwarder.key -out /etc/ssl/certs/logstash-forwarder.crt
+  command: openssl req -config /etc/ssl/logstash.cnf -x509 -days 3650 -batch -nodes -newkey rsa:2048 -keyout {{ inf_app_path }}/logstash/current/logstash-forwarder.key -out /etc/ssl/certs/logstash-forwarder-{{ ansible_environment }}.crt
   notify: generate lscert2
 
 - name: generate lscert2
@@ -15,4 +15,4 @@
   notify: generate lscert3
 
 - name: generate lscert3
-  fetch: src=/etc/ssl/certs/logstash-forwarder.crt dest=files/logstash-forwarder.crt
+  fetch: src=/etc/ssl/certs/logstash-forwarder-{{ ansible_environment }}.crt dest=roles/logstash-forwarder/files/logstash-forwarder-{{ ansible_environment }}.crt
