--- a/roles/logstash/tasks/main.yml
+++ b/roles/logstash/tasks/main.yml
@@ -9,6 +9,7 @@
     file: path={{ item }} state=directory group={{ inf_group }} owner={{ logstash_user }}
     with_items:
       - "{{ inf_app_path }}/logstash"
+      - "{{ etc_conf }}/logstash/conf.d"
 
   - name: Copy and extract logstash
     unarchive: src="/usr/nano/build/{{ ansible_environment }}/logstash/logstash.tar.gz" dest="{{ inf_app_path }}/logstash" owner={{ logstash_user }} group={{ inf_group }}
@@ -23,33 +24,33 @@
     template: src=bs_logstash.tmpl dest=/tmp/bs_logstash.tmpl
 
   - name: Run bootstrap process
-    command: /tmp/bootstrap -conf=/tmp/bs_logstash.conf -tmpl=/tmp/bs_logstash.tmpl
+    command: /tmp/bootstrap -conf=/tmp/bs_logstash.conf -tmpl=/tmp/bs_logstash.tmpl -port={{ consul_port }}
 
   - name: Add consul-template ctmpl files
     copy: src="{{ item.src }}" dest="{{ item.dest }}"
     with_items:
-      - { src: "01-lumberjack-input.ctmpl", dest: "/etc/consul-template/ctmpl/01-lumberjack-input.ctmpl" }
-      - { src: "90-lumberjack-output.ctmpl", dest: "/etc/consul-template/ctmpl/90-lumberjack-output.ctmpl" }
+      - { src: "01-lumberjack-input.ctmpl", dest: "{{ etc_conf }}/consul-template/ctmpl/01-lumberjack-input.ctmpl" }
+      - { src: "90-lumberjack-output.ctmpl", dest: "{{ etc_conf }}/consul-template/ctmpl/90-lumberjack-output.ctmpl" }
     notify: refresh consultemplate
 
   - name: Convert templates (logstash-input, logstash-output)
     template: src={{ item.src }} dest={{ item.dest }} mode=744 owner={{ logstash_user }}
     with_items:
-      - { src: "consul-template.input.conf", dest: "/etc/consul-template/conf.d/logstash-input" }
-      - { src: "consul-template.output.conf", dest: "/etc/consul-template/conf.d/logstash-output" }
+      - { src: "consul-template.input.conf", dest: "{{ etc_conf }}/consul-template/conf.d/logstash-input" }
+      - { src: "consul-template.output.conf", dest: "{{ etc_conf }}/consul-template/conf.d/logstash-output" }
     notify: refresh consultemplate
 
   - name: Add status utility
     template: src="/usr/nano/build/{{ ansible_environment }}/status-utils/logstash_status.sh" dest="{{ inf_app_path }}/logstash/current/bin/logstash_status.sh" mode=755
 
   - name: Convert template init.d
-    template: src=logstash.init.d dest=/etc/init.d/logstash mode=744
+    template: src=logstash.init.d dest=/etc/init.d/logstash{{ init_suffix }} mode=744
     notify:
       - install logstash
       - restart logstash
 
   - name: Convert template consul json
-    template: src=logstash.json dest=/etc/consul.d/logstash.json mode=744
+    template: src=logstash.json dest={{ etc_conf }}/consul.d/logstash.json mode=744
     notify: refresh consul
 
   - name: Copy ssl template
