logstash ssl cert with env, correct fetch

--- a/roles/logstash/handlers/main.yml
+++ b/roles/logstash/handlers/main.yml
@@ -7,7 +7,7 @@
   service: name=logstash{{ init_suffix }} state=restarted
 
 - name: generate lscert
-  command: openssl req -config /etc/ssl/logstash.cnf -x509 -days 3650 -batch -nodes -newkey rsa:2048 -keyout {{ inf_app_path }}/logstash/current/logstash-forwarder.key -out /etc/ssl/certs/logstash-forwarder-{{ ansible_environment }}.crt
+  command: openssl req -config /etc/ssl/logstash-{{ ansible-environment }}.cnf -x509 -days 3650 -batch -nodes -newkey rsa:2048 -keyout {{ inf_app_path }}/logstash/current/logstash-forwarder.key -out /etc/ssl/certs/logstash-forwarder-{{ ansible_environment }}.crt
   notify: generate lscert2
 
 - name: generate lscert2
@@ -15,4 +15,4 @@
   notify: generate lscert3
 
 - name: generate lscert3
-  fetch: src=/etc/ssl/certs/logstash-forwarder-{{ ansible_environment }}.crt dest=roles/logstash-forwarder/files/logstash-forwarder-{{ ansible_environment }}.crt
+  fetch: src=/etc/ssl/certs/logstash-forwarder-{{ ansible_environment }}.crt dest=roles/logstash-forwarder/files/ flat=yes
